<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/welcome_passwords_padding"
    android:paddingEnd="@dimen/welcome_passwords_padding">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/welcome_passwords_title_padding_top"
        android:text="@string/welcome_title"
        android:textColor="@color/common_text_color"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        style="@style/welcome_description_text_style"
        android:paddingTop="@dimen/welcome_passwords_description_padding_top"
        android:text="@string/welcome_passwords_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/passTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_pass_title"
        app:layout_constraintBottom_toTopOf="@id/pass"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/strengthText"
        app:layout_constraintTop_toBottomOf="@id/passTitle"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/strengthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_pass_medium"
        app:layout_constraintBottom_toTopOf="@id/confirmPassTitle"
        app:layout_constraintTop_toBottomOf="@id/pass" />

    <TextView
        android:id="@+id/confirmPassTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_confirm_pass_title"
        app:layout_constraintBottom_toTopOf="@id/confirmPass"
        app:layout_constraintTop_toBottomOf="@id/strengthText" />

    <EditText
        android:id="@+id/confirmPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/passMatchError"
        app:layout_constraintTop_toBottomOf="@id/confirmPassTitle"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/passMatchError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_pass_not_much"
        android:textColor="@color/common_error_color"
        app:layout_constraintBottom_toTopOf="@id/btnProceed"
        app:layout_constraintTop_toBottomOf="@id/confirmPass" />

    <com.mw.beam.beamwallet.core.views.BeamButton
        android:id="@+id/btnProceed"
        style="@style/common_button_style"
        android:layout_marginStart="@dimen/welcome_passwords_button_margin_start_end"
        android:layout_marginEnd="@dimen/welcome_passwords_button_margin_start_end"
        android:layout_marginBottom="@dimen/welcome_passwords_button_margin_bottom"
        app:button_text="@string/welcome_proceed_to_wallet"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>
