<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/welcome_logo_width"
        android:layout_height="@dimen/welcome_logo_height"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@id/logoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/logoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/welcome_logo_text_margin_top"
        android:fontFamily="@font/proxima_regular"
        android:text="@string/common_logo_text"
        android:textColor="@color/logo_text_color"
        app:layout_constraintBottom_toTopOf="@id/btnCreate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <com.mw.beam.beamwallet.core.views.BeamButton
        android:id="@+id/btnCreate"
        style="@style/common_button_style"
        android:layout_marginTop="@dimen/welcome_button_create_margin_top"
        app:button_icon="@drawable/ic_btn_create"
        app:button_text="@string/welcome_create_wallet"
        app:layout_constraintBottom_toTopOf="@id/btnRestore"
        app:layout_constraintTop_toBottomOf="@id/logoText" />

    <com.mw.beam.beamwallet.core.views.BeamButton
        android:id="@+id/btnRestore"
        style="@style/common_button_style"
        android:layout_marginTop="@dimen/welcome_button_restore_margin_top"
        app:button_icon="@drawable/ic_btn_restore"
        app:button_state_list="@color/restore_selector"
        app:button_text="@string/welcome_restore"
        app:button_text_color="@color/common_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnCreate" />
</android.support.constraint.ConstraintLayout>
