<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/walletTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/open_wallet_title_margin"
        android:textColor="@color/password_text_color"
        android:textSize="@dimen/open_wallet_title_text_size"
        app:layout_constraintBottom_toTopOf="@id/seedLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/seedLayout"
        style="@style/open_wallet_text_input_layout"
        app:hintTextAppearance="@style/open_wallet_text_input_layout_hint"
        app:layout_constraintBottom_toTopOf="@id/passLayout"
        app:layout_constraintTop_toBottomOf="@id/walletTitle">

        <EditText
            android:id="@+id/seed"
            android:lines="1"
            style="@style/open_wallet_password_view_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/open_wallet_seed_hint"
            android:inputType="none"
            tools:ignore="Autofill" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passLayout"
        style="@style/open_wallet_text_input_layout"
        app:hintTextAppearance="@style/open_wallet_text_input_layout_hint"
        app:layout_constraintBottom_toTopOf="@id/confirmPassLayout"
        app:layout_constraintTop_toBottomOf="@id/seedLayout">

        <EditText
            android:id="@+id/pass"
            style="@style/open_wallet_password_view_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/open_wallet_password_hint"
            tools:ignore="Autofill" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirmPassLayout"
        style="@style/open_wallet_text_input_layout"
        app:hintTextAppearance="@style/open_wallet_text_input_layout_hint"
        app:layout_constraintBottom_toTopOf="@id/btnProceed"
        app:layout_constraintTop_toBottomOf="@id/passLayout">

        <EditText
            android:id="@+id/confirmPass"
            style="@style/open_wallet_password_view_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/open_wallet_confirm_password_hint"
            tools:ignore="Autofill" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnProceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_common"
        android:gravity="center"
        android:paddingStart="@dimen/common_padding"
        android:paddingEnd="@dimen/common_padding"
        android:text="@string/open_wallet_btn_proceed"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPassLayout" />

</android.support.constraint.ConstraintLayout>
