<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbarLayout"
            layout="@layout/toolbar" />

        <android.support.v7.widget.CardView
            android:id="@+id/availableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:background="@color/colorPrimary"
            app:cardCornerRadius="@dimen/wallet_card_corner_radius"
            app:layout_constraintEnd_toStartOf="@id/hash"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:padding="@dimen/common_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/wallet_available"
                    android:textColor="@color/wallet_card_title_color"
                    android:textSize="@dimen/wallet_card_title_text_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/available"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btnReceive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/received_color"
            android:text="@string/wallet_btn_receive"
            app:layout_constraintEnd_toStartOf="@id/btnSend"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/availableLayout" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/sent_color"
            android:text="@string/wallet_btn_send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnReceive"
            app:layout_constraintTop_toBottomOf="@id/availableLayout" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/transactionsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btnSend" />
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navView"
        android:layout_width="@dimen/navigation_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/navigation_drawer_color"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_menu" />
</android.support.v4.widget.DrawerLayout>
